Add client-side download files and save those.

--- a/TestClient/TestClient.csproj
+++ b/TestClient/TestClient.csproj
@@ -101,5 +101,8 @@
       <Name>UpdateSystem</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Utils\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
